<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fj.dictionary.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="274dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:hint="@string/main_Headbutton1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="106dp"
            android:layout_height="60dp"
            android:hint="@string/main_Headbutton2"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <Button
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:hint="@string/main_button1" />
        <Button
            android:id="@+id/DTbutton"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:hint="@string/main_button2" />
    </LinearLayout>
</LinearLayout>
