<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E5E6E0">

    <!-- 显示界面 -->
    <EditText
        android:id="@+id/edit_input"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:gravity="start"
        android:hint="@string/input_text"
        android:padding="10dp"
        android:singleLine="false"
        android:textSize="22sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button1"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:hint="@string/button1_text"
            android:padding="10dp"
            android:singleLine="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button2"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/button2_text"
            android:padding="10dp"
            android:singleLine="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/button3_text"
            android:padding="10dp"
            android:singleLine="false"
            android:textSize="22sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="> >  查询："
            android:textColor="#00A2DC"/>
        <TextView
            android:id="@+id/output_text1"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="输出结果"
            android:background="@color/colorWhite">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=">>发音信息："
            android:textColor="#00A2DC"/>
        <TextView
            android:id="@+id/output_text2"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="输出结果"
            android:background="@color/colorWhite"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=">>基本释义："
        android:textColor="#00A2DC"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/output_text3"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:padding="10dp"
        android:text="输出结果"
        android:background="@color/colorWhite"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="更多例句："
        android:textColor="#00A2DC"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/output_text4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:text="英文例句"
        android:background="@color/colorWhite"/>
    <TextView
        android:id="@+id/output_text5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:text="中文翻译"
        android:background="@color/colorWhite"/>
</LinearLayout>